# franklin-resume

./: .bandit  .clang-format  .coveragerc  .dockerignore  .envrc  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  GEMINI.md  Makefile  Makefile.am  Procfile  README.md  SECURITY.md  _header.tex  bootstrap-golang.sh  bootstrap.sh  configure.ac  conftest.py  docker-compose.yml  docs  error1.txt  franklin-resume.code-workspace  go.mod  go.sum  hackrf.sh  index.php  logging.conf  main.go  my_resume.py  pyproject.toml  requirements.dev  requirements.txt  resume.tex  setup.py  setup.sh  (+4 more)
ansible/: Makefile.am  README.md  ansible.cfg  extensions  go-ansible.txt  hosts  inventory  network_update.sh  playbooks  roles  test_ansible.sh  tmp
ansible/.ansible_async/: j303185700273.3913547  j575944453070.26724  j708179886940.3980694  j8454318135.3980159  j966464948750.3912953
ansible/collections/: README.md  requirements.yml
ansible/collections/ansible_collections/: README.md
ansible/galaxy_cache/: api.json
ansible/group_vars/: all.yml
ansible/inventory/group_vars/: all.yml
ansible/keys/: id_rsa.pub
ansible/playbook/: debian.yml  nvidia_nodes.yml  playbook.yml  raspi_nodes.yml  servers.yml  storage.yml
ansible/playbooks/: README.md  debian.yml  openbsd.yml  reset.yml
ansible/roles/: .ansible-lint  README.md
ansible/roles/beagleboard/: README.md
ansible/roles/cluster/: HOWTO  README.md
ansible/roles/firewall/: README.md
ansible/roles/golang/: README.md
ansible/roles/k3s_server/: README.md
ansible/roles/kerberos/: README.md
ansible/roles/ldap/: README.md
ansible/roles/music/: README.md
ansible/roles/network/: .ansible-lint
ansible/roles/ntp/: README.md
ansible/roles/odroid/: stuff.txt
ansible/roles/openbsd/: README.md
ansible/roles/paloalto/: README.md
ansible/roles/pypi_internal/: README.md
ansible/roles/samba/: README.md
ansible/roles/thelio/: README.md
ansible/roles/tls/: README.md
ansible/scripts/: inventory.py
ansible/test/: runbats.sh
assembly/: Makefile.am  README.md
assembly/src/: Makefile.am  README.md  asm64-2  asm_hello.asm  first.asm  hello_arm64.asm  second.asm
assembly/src/xchg_rax_rax/: 0x00.asm  0x01.asm  0x02.asm  0x03.asm  0x04.asm  0x05.asm  0x06.asm  0x07.asm  0x08.asm  0x09.asm  0x0a.asm  README.md
assembly/test/: README.md  hello64  test_arm32.c
biography/: Makefile.am  README.md  _header.tex  bio-test.tex  bio.md  biography.tex  ee-bio.html  franklin_diaz_bio.odt  monserrat.sty
container/: .pre-commit-config.yaml  Dockerfile  Makefile.am  README.md  deploy.sh  docker-compose.yml  podman-compose.yml
container/aarch64/: Dockerfile
container/amd64/: Dockerfile
container/armhf/: Dockerfile
container/certbot/: Dockerfile  README.md  letsencrypt_palo.sh
container/freebsd/: Dockerfile  bsd_build.sh  build.sh  docker-compose.yml
container/golang/: Dockerfile
container/hanson/: Dockerfile
container/kdc-server/: Dockerfile
container/kdc-ssh-server/: Dockerfile  Makefile.am
container/kerberos-containers/: deploy.sh
container/kerberos-containers/kdc-server/: Dockerfile  Makefile.am  README.md
container/kerberos-containers/ssh-container/: Dockerfile  Makefile.am
container/python3/: Dockerfile  README.md
container/python3/files/: bashrc
container/rhel8/: Dockerfile  README.md
container/ssh-container/: Dockerfile  Makefile.am  README.md  docker-compose.yml  ssh_config
container/test/: README.md
container/test-ansible/files/: test_setup.sh
container/test-traffic/: Dockerfile
container/ubuntu1802/: Dockerfile
container/website/: Dockerfile  Dockerfile.arm64v8  Makefile.am  docker-compose.yml
customer/: .gitignore  .trivyignore  Makefile.am  README.md  SECURITY.md  bootstrap.sh  configure.ac
customer/data/: README.md  ip_address.txt
customer/docker/: .env  Makefile.am  docker-compose.yml
customer/docker/rhel8/: Dockerfile
customer/docs/: README.md  Traffic_Testing.odt  gcp_cloud_nat.odt  sso_migration_project.odt  variables_OTNET-Production_Template_Stack.csv
customer/docs/drawings/: diagram1.drawio  network_desgin.drawio
customer/docs/latex/: README.md  customer.aux  customer.out  customer.tex  customer_pre.tex  header.tex  labguide.tex  logging.tex
customer/lib/: configuration_helper.py
customer/src/: config.ini.in  config.py  data_collection.py  main.py  panorama_debug.py  requirements.txt
customer/test/: README.md  bundle_release.sh  cli.md  cloud_nat.txt  deploy_fw_gcp.sh  docker_setup.sh  remove_unused_objects.md  requirements-test.txt
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.dev  Dockerfile.hanson  Makefile  Makefile.am  README.md  docker-compose.yml
docker/OLD/: Dockerfile.tetx
docker/aarch64/: Dockerfile
docker/amd64/: Dockerfile
docker/armhf/: Dockerfile
docker/busybox/: Dockerfile
docker/certbot/: Dockerfile  README.md  letsencrypt_palo.sh
docker/cloudbot/: .dockerignore  Dockerfile  Makefile.am  README.md  app.js  package-lock.json  package.json.test
docker/files/: bashrc
docker/golang/: Dockerfile
docker/kerberos-containers/: README.md  deploy.sh
docker/python3/: Dockerfile
docker/rhel8/: Dockerfile  README.md
docker/test/: Dockerfile.alpine
resume/: Makefile.am  TLCresume.sty  _header.tex  fed-resume.sty  history.md  resume.md  resume.tex  test.tex
resume/biography/: biography.tex  ee-bio.odt  skills.xlsx
resume/sections/: activities.tex  education.tex  experience.tex  objective.tex  projects.tex  skills.tex
src/cluster_test/: Makefile.am  README.md  helloworld.sh  openmpi_obsd.txt  sub_install_pip.sh  sub_make_parallel.sh  submit_cluster_mpi.sh
src/gui-test/: .clang-tidy  .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac  gui-test
src/gui-test/src/: main.c  (+4 more)
src/music-tools/: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac
test/test_cluster/: Makefile.am  README.md  bootstrap.sh  build_openmpi.sh  build_python.sh  error.txt  my_mpi_hosts
test/test_gui/: .clang-tidy  Makefile.am  README.md  bootstrap.sh  configure.ac
(+2231 files in other folders)
