[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cloudbot/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src",
]
[tool.hatch.build.targets.wheel.force-include]
"./src" = "src"

[tool.hatch.build.targets.wheel]
only-packages = false

[project]
dynamic = ["version"]
name = "spam-eggs"
readme = "README.md"
requires-python = ">=3.8, <4"
authors = [
    { name = "franklin", email = "franklin@bitsmasher.net" },
]

[project.urls]
Homepage = "https://github.com/devsecfranklin/lab-franklin"

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
]
dev = [
]

# https://ansible.readthedocs.io/projects/pytest-ansible/getting_started/#help
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    'ignore:AnsibleCollectionFinder has already been configured',
]