# SPDX-FileCopyrightText: 2023-2025 franklin <smoooth.y62wj@passmail.net>
#
# SPDX-License-Identifier: MIT

AC_PREREQ([2.71])
AC_INIT(music-tools, 0.1, smoooth.y62wj@passmail.net, https://github.com/devsecfranklin/music-tools)
AC_CONFIG_MACRO_DIR(config/m4)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE
AC_CONFIG_FILES(
  Makefile
)
AC_OUTPUT